// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Merkur component loadScriptAssets() function should create script elements for script assets and return them in asset objects 1`] = `
[
  {
    "addEventListener": [MockFunction] {
      "calls": [
        [
          "load",
          [Function],
        ],
        [
          "error",
          [Function],
        ],
      ],
      "results": [
        {
          "type": "return",
          "value": undefined,
        },
        {
          "type": "return",
          "value": undefined,
        },
      ],
    },
    "async": "",
    "custom-element": "amp-fx-collection",
    "data-merkurAssetName": "widget.js",
    "dataset": {},
    "parentNode": {},
    "remove": [MockFunction],
    "removeAttribute": [Function],
    "setAttribute": [Function],
    "src": "http://localhost:4444/static/es13/widget.6241af42bfa3596bb129.js",
    "tagName": "script",
    Symbol(isLoaded): true,
  },
  {
    "addEventListener": [MockFunction] {
      "calls": [
        [
          "load",
          [Function],
        ],
        [
          "error",
          [Function],
        ],
      ],
      "results": [
        {
          "type": "return",
          "value": undefined,
        },
        {
          "type": "return",
          "value": undefined,
        },
      ],
    },
    "data-merkurAssetName": "undefined.js",
    "dataset": {},
    "defer": true,
    "parentNode": {},
    "remove": [MockFunction],
    "removeAttribute": [Function],
    "setAttribute": [Function],
    "src": "http://localhost:4444/static/es9/undefined.6961af42bfa3596bb147.js",
    "tagName": "script",
    Symbol(isLoaded): true,
  },
  {
    "addEventListener": [MockFunction] {
      "calls": [
        [
          "load",
          [Function],
        ],
        [
          "error",
          [Function],
        ],
      ],
      "results": [
        {
          "type": "return",
          "value": undefined,
        },
        {
          "type": "return",
          "value": undefined,
        },
      ],
    },
    "data-merkurAssetName": "polyfill2.js",
    "dataset": {},
    "defer": true,
    "parentNode": {},
    "remove": [MockFunction],
    "removeAttribute": [Function],
    "setAttribute": [Function],
    "src": "http://localhost:4444/static/es9/polyfill.6961af42bfa3596bb147.js",
    "tagName": "script",
    Symbol(isLoaded): true,
  },
  {
    "addEventListener": [MockFunction],
    "data-merkurAssetName": undefined,
    "dataset": {},
    "parentNode": {},
    "remove": [MockFunction],
    "removeAttribute": [Function],
    "setAttribute": [Function],
    "tagName": "script",
    "textContent": "alert();",
  },
]
`;

exports[`Merkur component loadStyleAssets() function should create style elements for style assets and return them in asset objects 1`] = `
[
  {
    "addEventListener": [MockFunction] {
      "calls": [
        [
          "load",
          [Function],
        ],
        [
          "error",
          [Function],
        ],
      ],
      "results": [
        {
          "type": "return",
          "value": undefined,
        },
        {
          "type": "return",
          "value": undefined,
        },
      ],
    },
    "data-merkurAssetName": "widget.css",
    "dataset": {},
    "href": "http://localhost:4444/static/es11/widget.814e0cb568c7ddc0725d.css",
    "parentNode": {},
    "rel": "stylesheet",
    "remove": [MockFunction],
    "removeAttribute": [Function],
    "setAttribute": [Function],
    "tagName": "link",
    Symbol(isLoaded): true,
  },
  {
    "addEventListener": [MockFunction],
    "data-merkurAssetName": undefined,
    "dataset": {},
    "innerHTML": ".cssClass { margin-top: 5px; }",
    "parentNode": {},
    "remove": [MockFunction],
    "removeAttribute": [Function],
    "setAttribute": [Function],
    "tagName": "style",
  },
]
`;
